--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,31 @@
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    
+    <meta name="copyright" content="MACode ID, https://www.macodeid.com/">
+    
+    <title>Blog - Topbar</title>
+    
+    <link rel="shortcut icon" type="image/ico" href="../../assets/favicon.ico">
+    
+    <link rel="stylesheet" type="text/css" href="../../assets/css/themify-icons.css">
+    
+    <link rel="stylesheet" type="text/css" href="../../assets/css/bootstrap.css">
+  
+    <link rel="stylesheet" type="text/css" href="../../assets/vendor/animate/animate.css">
+    
+    <link rel="stylesheet" type="text/css" href="../../assets/vendor/owl-carousel/owl.carousel.css">
+    
+    <link rel="stylesheet" type="text/css" href="../../assets/vendor/perfect-scrollbar/css/perfect-scrollbar.css">
+    
+    <link rel="stylesheet" type="text/css" href="../../assets/vendor/nice-select/css/nice-select.css">
+    
+    <link rel="stylesheet" type="text/css" href="../../assets/vendor/fancybox/css/jquery.fancybox.min.css">
+    
+    <link rel="stylesheet" type="text/css" href="../../assets/css/virtual.css">
+    
+    <link rel="stylesheet" type="text/css" href="../../assets/css/topbar.virtual.css">
+  </head>
